@@ -1809,15 +1809,15 @@ Perhaps, if you wanted to display a timer on the HUD in HH:MM:SS.CC (or MM:SS.CC
 				</tr>
 				<tr>
 					<td><kbd>!Scratchram_Frames2TimeOutput+0</kbd></td>
-					<td>Hour</td>
+					<td>Hour (up to 255 and using 3 or more digit hexdec works properly, therefore a frame value of <kbd>$034BBFFF</kbd> is the maximum you can safely display).</td>
 				</tr>
 				<tr>
 					<td><kbd>!Scratchram_Frames2TimeOutput+1</kbd></td>
-					<td>Minute (value ranges from 0-59 (<kbd>#$00</kbd>-<kbd>#$3B</kbd>))</td>
+					<td>Minute (value ranges from 0-59 (<kbd>#$00</kbd>-<kbd>#$3B</kbd>)).</td>
 				</tr>
 				<tr>
 					<td><kbd>!Scratchram_Frames2TimeOutput+2</kbd></td>
-					<td>Seconds (value ranges from 0-59 (<kbd>#$00</kbd>-<kbd>#$3B</kbd>))</td>
+					<td>Seconds (value ranges from 0-59 (<kbd>#$00</kbd>-<kbd>#$3B</kbd>)).</td>
 				</tr>
 				<tr>
 					<td><kbd>!Scratchram_Frames2TimeOutput+3</kbd></td>
