@@ -43,3 +43,6 @@
    supposed to decrease Gradual towards actual and therefore "-=" is a more appropriate than "+="
  - Mentioned 2 miscellaneous subroutines with a table: StringTo8x16Char and
    CountingAnimation16Bit.
+ - Mentioned on Frames2Timer that hours' maximum that it can safely represent is 255, and thus
+   the maximum timer value is $034BBFFF, which is 255 hours, 59 minutes, 59 seconds, and 59
+   frames (about 98 centiseconds).
